[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://BrainVisualizer/UI/Windows/View_Brain_Regions/WindowViewBrainRegions.gd" id="1_script"]
[ext_resource type="PackedScene" path="res://BrainVisualizer/UI/GenericElements/TitleBar/TitleBar.tscn" id="2_title"]
[ext_resource type="PackedScene" path="res://BrainVisualizer/UI/GenericElements/Scroll/ScrollGeneric/ScrollSectionGenericWithFilter.tscn" id="3_scroll"]

[node name="WindowViewBrainRegions" type="VBoxContainer"]
offset_right = 250.0
offset_bottom = 444.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/separation = 0
script = ExtResource("1_script")

[node name="TitleBar" parent="." instance=ExtResource("2_title")]
layout_mode = 2
title = "View Circuits"

[node name="WindowPanel" type="PanelContainer" parent="."]
layout_mode = 2

[node name="WindowMargin" type="MarginContainer" parent="WindowPanel"]
layout_mode = 2
theme_type_variation = &"MarginContainer_WindowBorder"

[node name="WindowInternals" type="VBoxContainer" parent="WindowPanel/WindowMargin"]
layout_mode = 2
theme_type_variation = &"VBoxContainer_far"

[node name="Button" type="Button" parent="WindowPanel/WindowMargin/WindowInternals"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
theme_type_variation = &"Button_Tall"
text = "Add Circuit..."

[node name="ScrollSectionGenericWithFilter" parent="WindowPanel/WindowMargin/WindowInternals" instance=ExtResource("3_scroll")]
layout_mode = 2

[node name="ScrollSectionGeneric" parent="WindowPanel/WindowMargin/WindowInternals/ScrollSectionGenericWithFilter" index="1"]
custom_minimum_size = Vector2(0, 200)
horizontal_scroll_mode = 0

[node name="BoxContainer" parent="WindowPanel/WindowMargin/WindowInternals/ScrollSectionGenericWithFilter/ScrollSectionGeneric" index="0"]
size_flags_horizontal = 3

[connection signal="pressed" from="WindowPanel/WindowMargin/WindowInternals/Button" to="." method="_press_add_region"]

[editable path="WindowPanel/WindowMargin/WindowInternals/ScrollSectionGenericWithFilter"]


